--- a/package.json
+++ b/package.json
@@ -11,26 +11,41 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@expressive-code/plugin-line-numbers": "^0.41.5",
     "@gsap/react": "^2.1.2",
     "@phosphor-icons/react": "^2.1.10",
     "@t3-oss/env-nextjs": "^0.13.10",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-query": "^5.90.13",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "gsap": "^3.14.2",
+    "hast-util-from-html-isomorphic": "^2.0.0",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
     "media-chrome": "^4.17.2",
     "motion": "^12.23.26",
     "next": "16.1.1",
-    "next-themes": "^0.4.6",
+    "next-mdx-remote-client": "^2.1.7",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-medium-image-zoom": "^5.4.0",
-    "react-resizable-panels": "3",
+    "react-resizable-panels": "^3.0.6",
+    "reading-time-estimator": "^2.0.4",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-document": "^7.0.3",
+    "rehype-expressive-code": "^0.41.5",
+    "rehype-katex": "^7.0.1",
+    "rehype-slug": "^6.0.0",
+    "rehype-unwrap-images": "^1.0.0",
+    "remark-extract-toc": "^2.0.0",
+    "remark-flexible-toc": "^1.2.4",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-normalize-headings": "^4.0.0",
+    "remark-parse": "^11.0.0",
     "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
@@ -39,6 +54,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
