--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-medium-image-zoom": "^5.4.0",
-    "react-resizable-panels": "^3.0.6",
+    "react-resizable-panels": "3",
     "reading-time-estimator": "^2.0.4",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
