--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@expressive-code/plugin-line-numbers": "^0.41.5",
     "@gsap/react": "^2.1.2",
     "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.13",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "fumadocs-core": "^16.4.4",
     "gsap": "^3.14.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "lenis": "^1.3.16",
@@ -46,6 +48,7 @@
     "remark-math": "^6.0.0",
     "remark-normalize-headings": "^4.0.0",
     "remark-parse": "^11.0.0",
+    "scroll-into-view-if-needed": "^3.1.0",
     "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
